--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,9 @@ dlldata.c
 # Benchmark Results
 BenchmarkDotNet.Artifacts/
 
+# .DS_Store
+.DS_Store
+
 # .NET Core
 project.lock.json
 project.fragment.lock.json
