Added Auditory assistance for handwriting, changed the buttons for Metronome

--- a/NeuroKinetic.xcodeproj/xcshareddata/xcschemes/NeuroKinetic.xcscheme
+++ b/NeuroKinetic.xcodeproj/xcshareddata/xcschemes/NeuroKinetic.xcscheme
@@ -27,8 +27,6 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
-      <Testables>
-      </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
@@ -38,8 +36,28 @@
             ReferencedContainer = "container:NeuroKinetic.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
+      <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "BE1B1A69235BF97200E6ED19"
+               BuildableName = "NeuroKineticTests.xctest"
+               BlueprintName = "NeuroKineticTests"
+               ReferencedContainer = "container:NeuroKinetic.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "F9B7AA82236F39FE000B3BF1"
+               BuildableName = "NeuroKineticUITests.xctest"
+               BlueprintName = "NeuroKineticUITests"
+               ReferencedContainer = "container:NeuroKinetic.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -61,8 +79,6 @@
             ReferencedContainer = "container:NeuroKinetic.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
